add validacoes e exceptions

--- a/cadastro-produtos/src/main/resources/ValidationMessages.properties
+++ b/cadastro-produtos/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,6 @@
 title.not.empty=Título não deve estar em branco.
+title.length=O título deve ter entre 5 a 200 caracteres.
 description.not.empty=Descrição não deve estar em branco.
+description.length=A descrição deve ter entre 20 a 600 caracteres.
+quantity.min=Verifique se a quantidade é maior que zero.
+price.not.blank=Verifique se o preço é maior que zero.
